{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 9,
  "lineage": "a43c698d-cd27-0ac1-29c0-a69730505b2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "two_tier_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0dc073b84528c6a13",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-kajal-app"
            },
            "vpc_id": "vpc-0ae69fddfffb8d864"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0732cf5b76b1003c5",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eng48-kajal-app"
            },
            "vpc_id": "vpc-0ae69fddfffb8d864"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c4438b43700440e6",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc073b84528c6a13",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-kajal-app"
            },
            "vpc_id": "vpc-0ae69fddfffb8d864"
          },
          "dependencies": [
            "aws_internet_gateway.two_tier_gw",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_assoc_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f49c9a0f192fe19d",
            "route_table_id": "rtb-0732cf5b76b1003c5",
            "subnet_id": "subnet-0f0ef2f49e55e0d89"
          },
          "dependencies": [
            "aws_route_table.vpc_route_private",
            "aws_subnet.two_tier_private_subnet",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_assoc_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fc52ff3b80d97c9",
            "route_table_id": "rtb-0c4438b43700440e6",
            "subnet_id": "subnet-0edbc9ca1ccdb67a2"
          },
          "dependencies": [
            "aws_internet_gateway.two_tier_gw",
            "aws_route_table.vpc_route_public",
            "aws_subnet.two_tier_public_subnet",
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two_tier_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0f0ef2f49e55e0d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f0ef2f49e55e0d89",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-kajal-app"
            },
            "vpc_id": "vpc-0ae69fddfffb8d864"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "two_tier_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0edbc9ca1ccdb67a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0edbc9ca1ccdb67a2",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-kajal-app"
            },
            "vpc_id": "vpc-0ae69fddfffb8d864"
          },
          "dependencies": [
            "aws_vpc.two_tier_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "two_tier_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0ae69fddfffb8d864",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0389935bd82f727d0",
            "default_route_table_id": "rtb-0ef3725be98823e13",
            "default_security_group_id": "sg-0d2c9366c3676bbee",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae69fddfffb8d864",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ef3725be98823e13",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-kajal-app"
            }
          }
        }
      ]
    }
  ]
}